add modo personalizado + pequenas mudanças

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -13,4 +13,8 @@
   --color-miku-800: #10554f;
   --color-miku-900: #0d4541;
   --color-miku-950: #062a28;
+
+  --breakpoint-xs: 368px;
+
+  --font-yarndings: "Flow Circular", "sans-serif";
 }
